error_java.txt
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by net.rubygrapefruit.platform.internal.NativeLibraryLoader in an unnamed module (file:/C:/Users/Ghanshyam/.gradle/wrapper/dists/gradle-8.11.1-bin/bpt9gzteqjrbo1mjrsomdt32c/gradle-8.11.1/lib/native-platform-0.22-milestone-26.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled

> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\Ghanshyam\Desktop\Branding_Hub\app\src\main\java\com\example\rmplus\PrivacyPolicyActivity.java:15: error: cannot find symbol
        TextView policyText = findViewById(R.id.policyText); // Assume ID is set, though it might not be in the original
                                               ^
  symbol:   variable policyText
  location: class id
C:\Users\Ghanshyam\Desktop\Branding_Hub\app\src\main\java\com\example\rmplus\SettingsActivity.java:44: error: cannot find symbol
        versionTxt.setText("Version " + BuildConfig.VERSION_NAME);
                                        ^
  symbol:   variable BuildConfig
  location: class SettingsActivity
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
[Incubating] Problems report is available at: file:///C:/Users/Ghanshyam/Desktop/Branding_Hub/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some input files use or override a deprecated API.
  C:\Users\Ghanshyam\Desktop\Branding_Hub\app\src\main\java\com\example\rmplus\PrivacyPolicyActivity.java:15: error: cannot find symbol
          TextView policyText = findViewById(R.id.policyText); // Assume ID is set, though it might not be in the original
                                                 ^
    symbol:   variable policyText
    location: class id
  C:\Users\Ghanshyam\Desktop\Branding_Hub\app\src\main\java\com\example\rmplus\SettingsActivity.java:44: error: cannot find symbol
          versionTxt.setText("Version " + BuildConfig.VERSION_NAME);
                                          ^
    symbol:   variable BuildConfig
    location: class SettingsActivity
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
16 actionable tasks: 1 executed, 15 up-to-date
